--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
-    "@tanstack/react-query": "^5.67.2",
+    "@tanstack/query-sync-storage-persister": "^5.71.5",
+    "@tanstack/react-query": "^5.71.5",
+    "@tanstack/react-query-persist-client": "^5.71.5",
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
