--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/query-sync-storage-persister": "^5.71.5",
     "@tanstack/react-query": "^5.71.5",
     "@tanstack/react-query-persist-client": "^5.71.5",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
