--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
+    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/query-sync-storage-persister": "^5.71.5",
     "@tanstack/react-query": "^5.71.5",
     "@tanstack/react-query-persist-client": "^5.71.5",
